--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
+    "axios": "^1.8.4",
+    "lucide-react": "^0.501.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
+    "tailwind": "^4.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.67",
-    "@types/react-dom": "^17.0.22"
+    "@types/react-dom": "^17.0.22",
+    "@types/uuid": "^10.0.0"
   }
 }
